--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .container {
     max-width: 960px;
     margin: 0 auto;
-    padding: 30px;
+    padding: 30px 30px 0px;;
 }
 
 .header {
@@ -62,7 +62,7 @@ h1 {
 
 .content {
     background-color: #ffffffce;
-    padding: 20px;
+    padding: 20px 20px 0px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
     
