--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h1 {
 
 .content {
     background-color: #ffffffce;
-    padding: 20px 20px 0px;
+    padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
     
